k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackjack-trainer
  namespace: blackjack
spec:
  selector:
    app: blackjack-trainer
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
